Positioning based padding on console app caused scrollbars to appear in IE8 and Webkit based browsers. Fixes lp:409832

--- a/ivle/webapp/console/media/console.css
+++ b/ivle/webapp/console/media/console.css
@@ -89,9 +89,8 @@
 #console_input {
     position: absolute;
     /* Input bar goes along the bottom. Pad all sides */
-    left: 0.5em;
-    right: 0.5em;
     bottom: 0.5em;
+    padding: 0 0.5em;
     /* Treat console line as table formatted, so the textbox is dynamic in size. */
     display: table;
 }
